# filters

./: .gitignore  CMakeLists.txt  configure.h.in
example/: CMakeLists.txt
example/include/: CSV.hpp
example/include/example/: Example_KalmanFilter.hpp  Example_LowPassFilter.hpp
example/src/: CSV.cpp  main.cpp
filter/: CMakeLists.txt
filter/include/: KalmanFilter.hpp  LowPassFilter.hpp
filter/src/: KalmanFilter.cpp
filters/: CMakeLists.txt
filters/include/: KalmanFilter.hpp  angle.hpp  matrix.hpp
filters/src/: KalmanFilter.cpp  angle.cpp  main.cpp
kalmanfilter/: CMakeLists.txt
kalmanfilter/include/: matrix.hpp
math/: CMakeLists.txt
math/include/: __matrix.hpp  angle.hpp  matrix.hpp
math/src/: __matrix.cpp  angle.cpp
python/: ArsGyro.csv  convert.py  graph.py  tmp.py
python/data/: ArsAccel.csv  SonarAlt.csv
python/data/output/: Output_1st_SonarAlt.csv  Output_2nd_SonarAlt.csv  Output_EulerKF.csv
